generated/monkeyParser.py
# Generated from C:/Users/Javier/PycharmProjects/Monkey\monkeyParser.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class monkeyParser ( Parser ):

    grammarFileName = "monkeyParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "':'", "'='", "'=='", "'{'", "'}'", 
                     "'('", "')'", "'['", "']'", "'~'", "'\"'", "','", "'<'", 
                     "'>'", "'<='", "'>='", "'+'", "'-'", "'*'", "'/'", 
                     "'fn'", "'if'", "'then'", "'else'", "'while'", "'do'", 
                     "'let'", "'in'", "'begin'", "'end'", "'const'", "'var'", 
                     "'return'", "'true'", "'false'", "'puts'", "'len'", 
                     "'first'", "'last'", "'rest'", "'push'" ]

    symbolicNames = [ "<INVALID>", "PCOMA", "DOSPUNTOS", "ASSIGN", "EQUAL", 
                      "LIZQ", "LDER", "PIZQ", "PDER", "PCIZQ", "PCDER", 
                      "VIR", "DCOMILLAS", "COMA", "MENOR", "MAYOR", "MENOREQUAL", 
                      "MAYOREQUAL", "SUMA", "RESTA", "MULT", "DIV", "FN", 
                      "IF", "THEN", "ELSE", "WHILE", "DO", "LET", "IN", 
                      "BEGIN", "END", "CONST", "VAR", "RETURN", "TRUE", 
                      "FALSE", "PUTS", "LEN", "FIRST", "LAST", "REST", "PUSH", 
                      "IDENT", "INTEGER", "STRING", "WS", "COMMENT", "COMMENTANI", 
                      "LINE_COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_expression = 2
    RULE_additionExpression = 3
    RULE_multiplicationExpression = 4
    RULE_elementExpression = 5
    RULE_elementAccess = 6
    RULE_callExpression = 7
    RULE_primitiveExpression = 8
    RULE_arrayFunctions = 9
    RULE_arrayLiteral = 10
    RULE_functionLiteral = 11
    RULE_functionParameters = 12
    RULE_hashLiteral = 13
    RULE_hashContent = 14
    RULE_expressionList = 15
    RULE_printExpression = 16
    RULE_ifExpression = 17
    RULE_elseExpression = 18
    RULE_multOperators = 19
    RULE_addOperators = 20
    RULE_equalOperators = 21

    ruleNames =  [ "program", "statement", "expression", "additionExpression", 
                   "multiplicationExpression", "elementExpression", "elementAccess", 
                   "callExpression", "primitiveExpression", "arrayFunctions", 
                   "arrayLiteral", "functionLiteral", "functionParameters", 
                   "hashLiteral", "hashContent", "expressionList", "printExpression", 
                   "ifExpression", "elseExpression", "multOperators", "addOperators", 
                   "equalOperators" ]

    EOF = Token.EOF
    PCOMA=1
    DOSPUNTOS=2
    ASSIGN=3
    EQUAL=4
    LIZQ=5
    LDER=6
    PIZQ=7
    PDER=8
    PCIZQ=9
    PCDER=10
    VIR=11
    DCOMILLAS=12
    COMA=13
    MENOR=14
    MAYOR=15
    MENOREQUAL=16
    MAYOREQUAL=17
    SUMA=18
    RESTA=19
    MULT=20
    DIV=21
    FN=22
    IF=23
    THEN=24
    ELSE=25
    WHILE=26
    DO=27
    LET=28
    IN=29
    BEGIN=30
    END=31
    CONST=32
    VAR=33
    RETURN=34
    TRUE=35
    FALSE=36
    PUTS=37
    LEN=38
    FIRST=39
    LAST=40
    REST=41
    PUSH=42
    IDENT=43
    INTEGER=44
    STRING=45
    WS=46
    COMMENT=47
    COMMENTANI=48
    LINE_COMMENT=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return monkeyParser.RULE_program

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ProgramASTContext(ProgramContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a monkeyParser.ProgramContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(monkeyParser.StatementContext)
            else:
                return self.getTypedRuleContext(monkeyParser.StatementContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramAST" ):
                return visitor.visitProgramAST(self)
            else:
                return visitor.visitChildren(self)



    def program(self):

        localctx = monkeyParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            localctx = monkeyParser.ProgramASTContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << monkeyParser.LIZQ) | (1 << monkeyParser.PIZQ) | (1 << monkeyParser.PCIZQ) | (1 << monkeyParser.FN) | (1 << monkeyParser.IF) | (1 << monkeyParser.LET) | (1 << monkeyParser.RETURN) | (1 << monkeyParser.TRUE) | (1 << monkeyParser.FALSE) | (1 << monkeyParser.PUTS) | (1 << monkeyParser.LEN) | (1 << monkeyParser.FIRST) | (1 << monkeyParser.LAST) | (1 << monkeyParser.REST) | (1 << monkeyParser.PUSH) | (1 << monkeyParser.IDENT) | (1 << monkeyParser.INTEGER) | (1 << monkeyParser.STRING))) != 0):
                self.state = 44
                self.statement()
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return monkeyParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LetStatementASTContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a monkeyParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LET(self):
            return self.getToken(monkeyParser.LET, 0)
        def IDENT(self):
            return self.getToken(monkeyParser.IDENT, 0)
        def ASSIGN(self):
            return self.getToken(monkeyParser.ASSIGN, 0)
        def expression(self):
            return self.getTypedRuleContext(monkeyParser.ExpressionContext,0)

        def PCOMA(self):
            return self.getToken(monkeyParser.PCOMA, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetStatementAST" ):
                return visitor.visitLetStatementAST(self)
            else:
                return visitor.visitChildren(self)


    class ReturnStatementASTContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a monkeyParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RETURN(self):
            return self.getToken(monkeyParser.RETURN, 0)
        def expression(self):
            return self.getTypedRuleContext(monkeyParser.ExpressionContext,0)

        def PCOMA(self):
            return self.getToken(monkeyParser.PCOMA, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatementAST" ):
                return visitor.visitReturnStatementAST(self)
            else:
                return visitor.visitChildren(self)


    class ExpressionStatementASTContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a monkeyParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(monkeyParser.ExpressionContext,0)

        def PCOMA(self):
            return self.getToken(monkeyParser.PCOMA, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionStatementAST" ):
                return visitor.visitExpressionStatementAST(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = monkeyParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 69
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [monkeyParser.LET]:
                localctx = monkeyParser.LetStatementASTContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.match(monkeyParser.LET)
                self.state = 51
                self.match(monkeyParser.IDENT)
                self.state = 52
                self.match(monkeyParser.ASSIGN)
                self.state = 53
                self.expression()
                self.state = 56
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [monkeyParser.PCOMA]:
                    self.state = 54
                    self.match(monkeyParser.PCOMA)
                    pass
                elif token in [monkeyParser.EOF, monkeyParser.LIZQ, monkeyParser.LDER, monkeyParser.PIZQ, monkeyParser.PCIZQ, monkeyParser.FN, monkeyParser.IF, monkeyParser.LET, monkeyParser.RETURN, monkeyParser.TRUE, monkeyParser.FALSE, monkeyParser.PUTS, monkeyParser.LEN, monkeyParser.FIRST, monkeyParser.LAST, monkeyParser.REST, monkeyParser.PUSH, monkeyParser.IDENT, monkeyParser.INTEGER, monkeyParser.STRING]:
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [monkeyParser.RETURN]:
                localctx = monkeyParser.ReturnStatementASTContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.match(monkeyParser.RETURN)
                self.state = 59
                self.expression()
                self.state = 62
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [monkeyParser.PCOMA]:
                    self.state = 60
                    self.match(monkeyParser.PCOMA)
                    pass
                elif token in [monkeyParser.EOF, monkeyParser.LIZQ, monkeyParser.LDER, monkeyParser.PIZQ, monkeyParser.PCIZQ, monkeyParser.FN, monkeyParser.IF, monkeyParser.LET, monkeyParser.RETURN, monkeyParser.TRUE, monkeyParser.FALSE, monkeyParser.PUTS, monkeyParser.LEN, monkeyParser.FIRST, monkeyParser.LAST, monkeyParser.REST, monkeyParser.PUSH, monkeyParser.IDENT, monkeyParser.INTEGER, monkeyParser.STRING]:
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [monkeyParser.LIZQ, monkeyParser.PIZQ, monkeyParser.PCIZQ, monkeyParser.FN, monkeyParser.IF, monkeyParser.TRUE, monkeyParser.FALSE, monkeyParser.PUTS, monkeyParser.LEN, monkeyParser.FIRST, monkeyParser.LAST, monkeyParser.REST, monkeyParser.PUSH, monkeyParser.IDENT, monkeyParser.INTEGER, monkeyParser.STRING]:
                localctx = monkeyParser.ExpressionStatementASTContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.expression()
                self.state = 67
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [monkeyParser.PCOMA]:
                    self.state = 65
                    self.match(monkeyParser.PCOMA)
                    pass
                elif token in [monkeyParser.EOF, monkeyParser.LIZQ, monkeyParser.LDER, monkeyParser.PIZQ, monkeyParser.PCIZQ, monkeyParser.FN, monkeyParser.IF, monkeyParser.LET, monkeyParser.RETURN, monkeyParser.TRUE, monkeyParser.FALSE, monkeyParser.PUTS, monkeyParser.LEN, monkeyParser.FIRST, monkeyParser.LAST, monkeyParser.REST, monkeyParser.PUSH, monkeyParser.IDENT, monkeyParser.INTEGER, monkeyParser.STRING]:
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return monkeyParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExpressionASTContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a monkeyParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def additionExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(monkeyParser.AdditionExpressionContext)
            else:
                return self.getTypedRuleContext(monkeyParser.AdditionExpressionContext,i)

        def equalOperators(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(monkeyParser.EqualOperatorsContext)
            else:
                return self.getTypedRuleContext(monkeyParser.EqualOperatorsContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionAST" ):
                return visitor.visitExpressionAST(self)
            else:
                return visitor.visitChildren(self)



    def expression(self):

        localctx = monkeyParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expression)
        self._la = 0 # Token type
        try:
            localctx = monkeyParser.ExpressionASTContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.additionExpression()
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << monkeyParser.EQUAL) | (1 << monkeyParser.MENOR) | (1 << monkeyParser.MAYOR) | (1 << monkeyParser.MENOREQUAL) | (1 << monkeyParser.MAYOREQUAL))) != 0):
                self.state = 72
                self.equalOperators()
                self.state = 73
                self.additionExpression()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdditionExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return monkeyParser.RULE_additionExpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AdditionExpressionASTContext(AdditionExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a monkeyParser.AdditionExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def multiplicationExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(monkeyParser.MultiplicationExpressionContext)
            else:
                return self.getTypedRuleContext(monkeyParser.MultiplicationExpressionContext,i)

        def addOperators(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(monkeyParser.AddOperatorsContext)
            else:
                return self.getTypedRuleContext(monkeyParser.AddOperatorsContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdditionExpressionAST" ):
                return visitor.visitAdditionExpressionAST(self)
            else:
                return visitor.visitChildren(self)



    def additionExpression(self):

        localctx = monkeyParser.AdditionExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_additionExpression)
        self._la = 0 # Token type
        try:
            localctx = monkeyParser.AdditionExpressionASTContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.multiplicationExpression()
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==monkeyParser.SUMA or _la==monkeyParser.RESTA:
                self.state = 81
                self.addOperators()
                self.state = 82
                self.multiplicationExpression()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultiplicationExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return monkeyParser.RULE_multiplicationExpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MultiplicationExpressionASTContext(MultiplicationExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a monkeyParser.MultiplicationExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def elementExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(monkeyParser.ElementExpressionContext)
            else:
                return self.getTypedRuleContext(monkeyParser.ElementExpressionContext,i)

        def multOperators(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(monkeyParser.MultOperatorsContext)
            else:
                return self.getTypedRuleContext(monkeyParser.MultOperatorsContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplicationExpressionAST" ):
                return visitor.visitMultiplicationExpressionAST(self)
            else:
                return visitor.visitChildren(self)



    def multiplicationExpression(self):

        localctx = monkeyParser.MultiplicationExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_multiplicationExpression)
        self._la = 0 # Token type
        try:
            localctx = monkeyParser.MultiplicationExpressionASTContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.elementExpression()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==monkeyParser.MULT or _la==monkeyParser.DIV:
                self.state = 90
                self.multOperators()
                self.state = 91
                self.elementExpression()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return monkeyParser.RULE_elementExpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ElementExpressionASTContext(ElementExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a monkeyParser.ElementExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def primitiveExpression(self):
            return self.getTypedRuleContext(monkeyParser.PrimitiveExpressionContext,0)

        def elementAccess(self):
            return self.getTypedRuleContext(monkeyParser.ElementAccessContext,0)

        def callExpression(self):
            return self.getTypedRuleContext(monkeyParser.CallExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElementExpressionAST" ):
                return visitor.visitElementExpressionAST(self)
            else:
                return visitor.visitChildren(self)



    def elementExpression(self):

        localctx = monkeyParser.ElementExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_elementExpression)
        try:
            localctx = monkeyParser.ElementExpressionASTContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.primitiveExpression()
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 99
                self.elementAccess()
                pass

            elif la_ == 2:
                self.state = 100
                self.callExpression()
                pass

            elif la_ == 3:
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementAccessContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return monkeyParser.RULE_elementAccess

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ElementAccessASTContext(ElementAccessContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a monkeyParser.ElementAccessContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PCIZQ(self):
            return self.getToken(monkeyParser.PCIZQ, 0)
        def expression(self):
            return self.getTypedRuleContext(monkeyParser.ExpressionContext,0)

        def PCDER(self):
            return self.getToken(monkeyParser.PCDER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElementAccessAST" ):
                return visitor.visitElementAccessAST(self)
            else:
                return visitor.visitChildren(self)



    def elementAccess(self):

        localctx = monkeyParser.ElementAccessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_elementAccess)
        try:
            localctx = monkeyParser.ElementAccessASTContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(monkeyParser.PCIZQ)
            self.state = 105
            self.expression()
            self.state = 106
            self.match(monkeyParser.PCDER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return monkeyParser.RULE_callExpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CallExpressionASTContext(CallExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a monkeyParser.CallExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PIZQ(self):
            return self.getToken(monkeyParser.PIZQ, 0)
        def expressionList(self):
            return self.getTypedRuleContext(monkeyParser.ExpressionListContext,0)

        def PDER(self):
            return self.getToken(monkeyParser.PDER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallExpressionAST" ):
                return visitor.visitCallExpressionAST(self)
            else:
                return visitor.visitChildren(self)



    def callExpression(self):

        localctx = monkeyParser.CallExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_callExpression)
        try:
            localctx = monkeyParser.CallExpressionASTContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(monkeyParser.PIZQ)
            self.state = 109
            self.expressionList()
            self.state = 110
            self.match(monkeyParser.PDER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimitiveExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return monkeyParser.RULE_primitiveExpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PrimitiveExpressionStringASTContext(PrimitiveExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a monkeyParser.PrimitiveExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(monkeyParser.STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitiveExpressionStringAST" ):
                return visitor.visitPrimitiveExpressionStringAST(self)
            else:
                return visitor.visitChildren(self)


    class PrimitiveExpressionhashLiteralASTContext(PrimitiveExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a monkeyParser.PrimitiveExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def hashLiteral(self):
            return self.getTypedRuleContext(monkeyParser.HashLiteralContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitiveExpressionhashLiteralAST" ):
                return visitor.visitPrimitiveExpressionhashLiteralAST(self)
            else:
                return visitor.visitChildren(self)


    class PrimitiveExpressionprintExpressionASTContext(PrimitiveExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a monkeyParser.PrimitiveExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def printExpression(self):
            return self.getTypedRuleContext(monkeyParser.PrintExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitiveExpressionprintExpressionAST" ):
                return visitor.visitPrimitiveExpressionprintExpressionAST(self)
            else:
                return visitor.visitChildren(self)


    class PrimitiveExpressionTrueASTContext(PrimitiveExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a monkeyParser.PrimitiveExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TRUE(self):
            return self.getToken(monkeyParser.TRUE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitiveExpressionTrueAST" ):
                return visitor.visitPrimitiveExpressionTrueAST(self)
            else:
                return visitor.visitChildren(self)


    class PrimitiveExpressionExpressionASTContext(PrimitiveExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a monkeyParser.PrimitiveExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PIZQ(self):
            return self.getToken(monkeyParser.PIZQ, 0)
        def expression(self):
            return self.getTypedRuleContext(monkeyParser.ExpressionContext,0)

        def PDER(self):
            return self.getToken(monkeyParser.PDER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitiveExpressionExpressionAST" ):
                return visitor.visitPrimitiveExpressionExpressionAST(self)
            else:
                return visitor.visitChildren(self)


    class PrimitiveExpressionIdentASTContext(PrimitiveExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a monkeyParser.PrimitiveExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENT(self):
            return self.getToken(monkeyParser.IDENT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitiveExpressionIdentAST" ):
                return visitor.visitPrimitiveExpressionIdentAST(self)
            else:
                return visitor.visitChildren(self)


    class PrimitiveExpressionIntegerASTContext(PrimitiveExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a monkeyParser.PrimitiveExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER(self):
            return self.getToken(monkeyParser.INTEGER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitiveExpressionIntegerAST" ):
                return visitor.visitPrimitiveExpressionIntegerAST(self)
            else:
                return visitor.visitChildren(self)


    class PrimitiveExpressionarrayFunctionsASTContext(PrimitiveExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a monkeyParser.PrimitiveExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arrayFunctions(self):
            return self.getTypedRuleContext(monkeyParser.ArrayFunctionsContext,0)

        def PIZQ(self):
            return self.getToken(monkeyParser.PIZQ, 0)
        def expressionList(self):
            return self.getTypedRuleContext(monkeyParser.ExpressionListContext,0)

        def PDER(self):
            return self.getToken(monkeyParser.PDER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitiveExpressionarrayFunctionsAST" ):
                return visitor.visitPrimitiveExpressionarrayFunctionsAST(self)
            else:
                return visitor.visitChildren(self)


    class PrimitiveExpressionifExpressionASTContext(PrimitiveExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a monkeyParser.PrimitiveExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifExpression(self):
            return self.getTypedRuleContext(monkeyParser.IfExpressionContext,0)

